# cse340redux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  execute.cc  execute.h  inputbuf.cc  inputbuf.h  lexer.cc  lexer.h  main.cc  main.h  parser.cc  parser.h  token.cc
new/: CMakeLists.txt  execute.cc  execute.h  inputbuf.cc  inputbuf.h  lexer.cc  lexer.h  main.cc  main.h  parser.cc  parser.h  token.cc  token.h
new/tests/: test29.txt
old/: execute.cc  inputbuf.cc  inputbuf.h  lexer.cc  lexer.h  memorytable.cc  project4.cc  symboltable.cc  symboltable.h
project1/: Makefile  token.cc  token.h
project1/tests/: t10_ss_assigndivnum.txt  t11_ss_assignplusnumid.txt  t12_ss_assignsubnumid.txt  t13_ss_assignmultnumid.txt  t14_ss_assigndivnumid.txt  t15_ss_assignnum.txt  t16_ss_assignid.txt  t17_assign_out.txt  t18_inp_assign_out.txt  t19_assign2_out.txt  t1_ss_outputstmt.txt  t20_inp_mult_out.txt  t21_inp_div_out.txt  t22_inp_sub_out.txt  t23_inp_plus_out.txt  t24_inp_sub_out.txt  t25_inp_mult_out.txt  t26_inp_div_out.txt  t27_inp_plus_out.txt  t28_inp_sub_out2.txt  t29_inp_mult_out2.txt  t2_ss_inputstmt.txt  t30_inp_div_out2.txt  t31_inp_assign_out2.txt  t32_inp_assign_out3.txt  t33_assign_out.txt  t34_assignmult_out.txt  t35_assignsub_out.txt  t36_assigndiv_out.txt  t37_assignplus_out2.txt  t38_assignsub_out2.txt  t39_assignmult_out2.txt  t3_ss_assignplus.txt  t40_assigndiv_out2.txt  t41_assignplus_out3.txt  t42_assignmult_out3.txt  t43_assignsub_out3.txt  t44_assigndiv_out3.txt  t45_assign_plusmult_out.txt  t46_assign_submult.txt  (+69 more)
project2/: Makefile  token.cc  token.h
project3/: Makefile  token.cc  token.h
project3/tests/: t10.txt.expected1  t10.txt.expected2  t11.txt  t11.txt.expected2  t12.txt  t13.txt  t14.txt  t6.txt.expected1  t6.txt.expected2  t7.txt  t7.txt.expected1  t7.txt.expected2  t8.txt.expected1  t8.txt.expected2  t9.txt.expected1  t9.txt.expected2
project4/: Makefile  token.h
project4/tests/: test34.txt  test35.txt
project4redux/: CMakeLists.txt  Makefile  assignment4.cc  demo.cc  expr.cc  expr.h  inputbuf.cc  inputbuf.h  lexer.cc  lexer.h  main.cc  main.h  memorytable.h  parser.cc  parser.h  project4.cc  readme.md  temp.cc  temp.h  token.cc  token.h
tests/: test2.txt
